# fedfs-utils

./: .gitignore  INSTALL  Makefile.am  README  autogen.sh  configure.ac  doxy.cfg
contrib/: Makefile.am
contrib/init/: Makefile.am  README  fedfs  fedfs.autofs  rpcfedfsd  rpcfedfsd.service
contrib/init-scripts/: Makefile.am  rpcfedfsd
contrib/ldap/: Makefile.am  add-database-olc  add-fedfs-entry  add-referral-olc  add-schema-389  add-schema-olc
doc/: CheckInTests  Makefile.am
doc/ldap/: Makefile.am  fedfs-schema.ldif  fedfs.schema
doc/man/: Makefile.am  fedfs-create-junction.8  fedfs-create-replication.8  fedfs-delete-junction.8  fedfs-delete-replication.8  fedfs-get-limited-nsdb-params.8  fedfs-get-nsdb-params.8  fedfs-lookup-junction.8  fedfs-lookup-replication.8  fedfs-map-nfs4.8  fedfs-null.8  fedfs-set-nsdb-params.8  fedfs.7  mount.fedfs.8  nfsref.8  nsdb-annotate.8  nsdb-create-fsl.8  nsdb-create-fsn.8  nsdb-delete-fsl.8  nsdb-delete-fsn.8  nsdb-delete-nsdb.8  nsdb-describe.8  nsdb-list.8  nsdb-nces.8  nsdb-parameters.7  nsdb-remove-nci.8  nsdb-resolve-fsn.8  nsdb-simple-nce.8  nsdb-update-fsl.8  nsdb-update-nci.8  nsdbparams.8  rpc.fedfsd.8
doc/rpcl/: Makefile.am  fedfs_admin.x
src/: Makefile.am
src/fedfsc/: Makefile.am  fedfs-create-junction.c  fedfs-create-replication.c  fedfs-delete-junction.c  fedfs-delete-replication.c  fedfs-get-limited-nsdb-params.c  fedfs-get-nsdb-params.c  fedfs-lookup-junction.c  fedfs-lookup-replication.c  fedfs-null.c  fedfs-set-nsdb-params.c
src/fedfsd/: Makefile.am  fedfsd.h  listen.c  main.c  privilege.c  svc.c
src/include/: Makefile.am  fedfs.h  fedfs_admin.h  getsrvinfo.h  gpl-boiler.h  junction.h  list.h  nfs-plugin.h  nsdb.h  parse_opt.h  path.h  token.h  xlog.h
src/libadmin/: Makefile.am  fedfs_admin_clnt.c  fedfs_admin_svc.c  fedfs_admin_xdr.c
src/libjunction/: Makefile.am  display-junction.c  export-cache.c  fedfs.c  junction-internal.h  junction.c  locations.c  nfs.c  xml.c
src/libnsdb/: Makefile.am  administrator.c  annotation.c  connsec.c  display.c  fileserver.c  ldap.c  nsdb-internal.h  nsdb.c  path.c  sqlite.c
src/libparser/: Makefile.am  parse_opt.c  token.c
src/libpath/: Makefile.am  path.c
src/libsi/: Makefile.am  getsrvinfo.c
src/libxlog/: Makefile.am  xlog.c
src/mount/: Makefile.am  fedfs-map-nfs4.c  main.c  nls.h
src/nfsref/: Makefile.am  add.c  lookup.c  nfsref.c  nfsref.h  remove.c
src/nsdbc/: Makefile.am  nsdb-annotate.c  nsdb-create-fsl.c  nsdb-create-fsn.c  nsdb-create-nce.c  nsdb-delete-fsl.c  nsdb-delete-fsn.c  nsdb-delete-nce.c  nsdb-delete-nsdb.c  nsdb-describe.c  nsdb-list.c  nsdb-nces.c  nsdb-remove-nci.c  nsdb-resolve-fsn.c  nsdb-simple-nce.c  nsdb-update-fsl.c  nsdb-update-nci.c
src/nsdbparams/: Makefile.am  delete.c  list.c  main.c  nsdbparams.h  show.c  update.c
src/plug-ins/: Makefile.am  nfs-plugin.c
src/resolve-junction/: Makefile.am  main.c  privilege.c  privilege.h
